--- a/gui/control_panel.ui
+++ b/gui/control_panel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1106</width>
-    <height>735</height>
+    <height>852</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>50</x>
      <y>30</y>
-     <width>121</width>
-     <height>151</height>
+     <width>201</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -32,10 +32,10 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>190</y>
-     <width>121</width>
-     <height>151</height>
+     <x>260</x>
+     <y>30</y>
+     <width>201</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -48,10 +48,10 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>350</y>
-     <width>121</width>
-     <height>151</height>
+     <x>470</x>
+     <y>30</y>
+     <width>201</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -64,10 +64,10 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>510</y>
-     <width>121</width>
-     <height>151</height>
+     <x>680</x>
+     <y>30</y>
+     <width>201</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -77,10 +77,10 @@
   <widget class="QStackedWidget" name="page_stack">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>30</y>
-     <width>911</width>
-     <height>631</height>
+     <x>50</x>
+     <y>110</y>
+     <width>831</width>
+     <height>331</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -90,11 +90,16 @@
     <widget class="QLabel" name="title">
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>180</y>
-       <width>291</width>
-       <height>91</height>
+       <x>200</x>
+       <y>10</y>
+       <width>431</width>
+       <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
      </property>
      <property name="text">
       <string>龙骨式连续体机器人控制面板</string>
@@ -104,9 +109,9 @@
      <property name="geometry">
       <rect>
        <x>280</x>
-       <y>280</y>
-       <width>291</width>
-       <height>91</height>
+       <y>120</y>
+       <width>71</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -116,10 +121,10 @@
     <widget class="QLabel" name="text_password">
      <property name="geometry">
       <rect>
-       <x>260</x>
-       <y>420</y>
-       <width>291</width>
-       <height>91</height>
+       <x>280</x>
+       <y>160</y>
+       <width>71</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="text">
@@ -129,10 +134,10 @@
     <widget class="QPushButton" name="login">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>560</y>
-       <width>117</width>
-       <height>32</height>
+       <x>280</x>
+       <y>210</y>
+       <width>251</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="text">
@@ -142,11 +147,17 @@
     <widget class="QComboBox" name="user">
      <property name="geometry">
       <rect>
-       <x>390</x>
-       <y>310</y>
-       <width>103</width>
+       <x>360</x>
+       <y>120</y>
+       <width>171</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
      <item>
       <property name="text">
@@ -162,8 +173,8 @@
     <widget class="QPlainTextEdit" name="password">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>450</y>
+       <x>360</x>
+       <y>160</y>
        <width>171</width>
        <height>41</height>
       </rect>
