--- a/gui/design/control.ui
+++ b/gui/design/control.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>971</width>
-    <height>706</height>
+    <width>1048</width>
+    <height>728</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>龙骨式连续体机器人操作软件</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -97,6 +97,12 @@ QStackedWidget QComboBox {
 }
 QStackedWidget QComboBox:disabled {
 	background-color: rgb(86, 88, 93);
+	color: gray;
+}
+
+QStackedWidget QTextBrowser {
+	color: white;
+	font-size: 20px;
 }</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,8">
@@ -151,7 +157,7 @@ QStackedWidget QComboBox:disabled {
          <item>
           <widget class="QPushButton" name="bt_control">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -167,7 +173,7 @@ QStackedWidget QComboBox:disabled {
          <item>
           <widget class="QPushButton" name="bt_log">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -267,7 +273,7 @@ QStackedWidget QComboBox:disabled {
                 <item>
                  <widget class="QComboBox" name="bx_rate0">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -290,7 +296,7 @@ QStackedWidget QComboBox:disabled {
                 <item>
                  <widget class="QComboBox" name="bx_rate1">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -320,7 +326,7 @@ QStackedWidget QComboBox:disabled {
                 <item>
                  <widget class="QPushButton" name="bt_channel0">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -336,7 +342,7 @@ QStackedWidget QComboBox:disabled {
                 <item>
                  <widget class="QPushButton" name="bt_channel1">
                   <property name="enabled">
-                   <bool>false</bool>
+                   <bool>true</bool>
                   </property>
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -354,7 +360,7 @@ QStackedWidget QComboBox:disabled {
               <item>
                <widget class="QPushButton" name="bt_reset">
                 <property name="enabled">
-                 <bool>false</bool>
+                 <bool>true</bool>
                 </property>
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -370,7 +376,7 @@ QStackedWidget QComboBox:disabled {
               <item>
                <widget class="QPushButton" name="bt_close">
                 <property name="enabled">
-                 <bool>false</bool>
+                 <bool>true</bool>
                 </property>
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -422,12 +428,15 @@ QStackedWidget QComboBox:disabled {
                  <number>15</number>
                 </property>
                 <item>
-                 <widget class="QRadioButton" name="radioButton">
+                 <widget class="QRadioButton" name="r_pos">
                   <property name="enabled">
                    <bool>true</bool>
                   </property>
                   <property name="text">
                    <string>位置模式</string>
+                  </property>
+                  <property name="checkable">
+                   <bool>true</bool>
                   </property>
                   <property name="checked">
                    <bool>true</bool>
@@ -435,12 +444,15 @@ QStackedWidget QComboBox:disabled {
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="radioButton_2">
+                 <widget class="QRadioButton" name="r_vel">
                   <property name="enabled">
                    <bool>true</bool>
                   </property>
                   <property name="text">
                    <string>速度模式</string>
+                  </property>
+                  <property name="checked">
+                   <bool>false</bool>
                   </property>
                  </widget>
                 </item>
@@ -483,7 +495,7 @@ QStackedWidget QComboBox:disabled {
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit">
+                 <widget class="QLineEdit" name="le_acc">
                   <property name="enabled">
                    <bool>true</bool>
                   </property>
@@ -537,7 +549,7 @@ QStackedWidget QComboBox:disabled {
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_2">
+                 <widget class="QLineEdit" name="le_dec">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                     <horstretch>0</horstretch>
@@ -591,7 +603,7 @@ QStackedWidget QComboBox:disabled {
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_3">
+                 <widget class="QLineEdit" name="le_vel">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                     <horstretch>0</horstretch>
@@ -626,7 +638,7 @@ QStackedWidget QComboBox:disabled {
                  <number>5</number>
                 </property>
                 <item>
-                 <widget class="QLabel" name="tx_vel_2">
+                 <widget class="QLabel" name="tx_speed">
                   <property name="enabled">
                    <bool>true</bool>
                   </property>
@@ -645,7 +657,7 @@ QStackedWidget QComboBox:disabled {
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_4">
+                 <widget class="QLineEdit" name="le_speed">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                     <horstretch>0</horstretch>
@@ -663,7 +675,7 @@ QStackedWidget QComboBox:disabled {
                </layout>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton">
+               <widget class="QPushButton" name="bt_save">
                 <property name="enabled">
                  <bool>true</bool>
                 </property>
@@ -1156,19 +1168,62 @@ QStackedWidget QComboBox:disabled {
           </layout>
          </widget>
          <widget class="QWidget" name="pg_log">
-          <widget class="QGroupBox" name="groupBox_4">
-           <property name="geometry">
-            <rect>
-             <x>100</x>
-             <y>80</y>
-             <width>361</width>
-             <height>91</height>
-            </rect>
-           </property>
-           <property name="title">
-            <string>力传感器</string>
-           </property>
-          </widget>
+          <layout class="QVBoxLayout" name="verticalLayout_49">
+           <item>
+            <widget class="QGroupBox" name="groupBox_4">
+             <property name="title">
+              <string>力传感器</string>
+             </property>
+             <widget class="QLabel" name="label_28">
+              <property name="geometry">
+               <rect>
+                <x>50</x>
+                <y>50</y>
+                <width>41</width>
+                <height>41</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>1</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QTextBrowser" name="textBrowser">
+              <property name="geometry">
+               <rect>
+                <x>30</x>
+                <y>130</y>
+                <width>91</width>
+                <height>41</height>
+               </rect>
+              </property>
+              <property name="html">
+               <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:20px; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:16pt;&quot;&gt;0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              </property>
+             </widget>
+            </widget>
+           </item>
+           <item>
+            <widget class="QGroupBox" name="groupBox_9">
+             <property name="title">
+              <string>电机位置</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QGroupBox" name="groupBox_10">
+             <property name="title">
+              <string>其他</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </widget>
        </item>
