--- a/gui/design/login.ui
+++ b/gui/design/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1300</width>
-    <height>630</height>
+    <width>788</width>
+    <height>506</height>
    </rect>
   </property>
   <property name="font">
@@ -80,10 +80,10 @@
    <widget class="QLabel" name="title_main">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>50</y>
-      <width>761</width>
-      <height>261</height>
+      <x>400</x>
+      <y>30</y>
+      <width>351</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="font">
@@ -100,14 +100,14 @@
      <string notr="true">color: rgba(252, 175, 62, 200);</string>
     </property>
     <property name="text">
-     <string>龙骨式连续体机器人控制面板</string>
+     <string>连续体机器人</string>
     </property>
    </widget>
    <widget class="QLabel" name="version">
     <property name="geometry">
      <rect>
-      <x>1160</x>
-      <y>580</y>
+      <x>640</x>
+      <y>450</y>
       <width>141</width>
       <height>51</height>
      </rect>
@@ -154,7 +154,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>530</y>
+      <y>390</y>
       <width>181</width>
       <height>51</height>
      </rect>
@@ -175,7 +175,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>310</y>
+      <y>230</y>
       <width>301</width>
       <height>51</height>
      </rect>
@@ -203,7 +203,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>170</y>
+      <y>130</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -219,7 +219,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>220</y>
+      <y>180</y>
       <width>221</width>
       <height>41</height>
      </rect>
@@ -235,7 +235,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>410</y>
+      <y>290</y>
       <width>301</width>
       <height>51</height>
      </rect>
@@ -291,7 +291,7 @@
   </action>
  </widget>
  <resources>
-  <include location="../resourece.qrc"/>
+  <include location="../resource/resourece.qrc"/>
   <include location="../resource/resourece.qrc"/>
  </resources>
  <connections/>
